k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: employee-app

  template:
    metadata:
      labels:
        app: employee-app

    spec:
      containers:
        - name: employee-app

          image: jagruthiacr.azurecr.io/employee-app:2.0

          ports:
            - containerPort: 3000
