k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: employee-app-service

spec:
  type: ClusterIP

  selector:
    app: employee-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
