k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: employee-app-service
                port:
                  number: 80
